--- a/index.html
+++ b/index.html
@@ -1,256 +1,17 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-
-  <title>Spring 2019, Interactive Design and the Internet, Yale University ... Welcome</title>
-  <meta name="description" content="">
-
+<style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
 </head>
 <body>
 
-<div id="container">
-
-    <div id="banner">
-    </div>
-  <!-- </a> -->
-
-  <header>
-    <nav id="top" class="menu">
-
-  <ul>
-        <li  class="current">
-            	<a href="http://spring2019.veryinteractive.net">Welcome</a>
-          </li>
-        <li >
-            	<a href="http://spring2019.veryinteractive.net/calendar">Calendar</a>
-          </li>
-        <li >
-            	<a href="http://spring2019.veryinteractive.net/exercises">Exercises</a>
-          </li>
-        <li >
-            	<a href="http://spring2019.veryinteractive.net/writings">Writings</a>
-          </li>
-        <li >
-            	<a href="http://spring2019.veryinteractive.net/final-project">Final Project</a>
-          </li>
-        <li >
-            	<a href="http://spring2019.veryinteractive.net/resources">Resources</a>
-          </li>
-        <li>
-      <a href="https://paper.dropbox.com/folder/show/ART369b-Spring-2019-Interactive-Design-and-the-Internet-e.1gg8YzoPEhbTkrhvQwJ2zzxTNVy7JRbcRva1CHN2k80w2Oe7bkuG" target="_blank" class="offsite">
-        <img src="http://spring2019.veryinteractive.net/assets/images/logo-dropboxpaper2.png">
-      </a>
-    </li>
-    <li>
-     <a href="https://www.are.na/laurel-schwulst/for-my-art369b-class-spring-2019" target="_blank" class="offsite">
-       <img src="http://spring2019.veryinteractive.net/assets/images/logo-arena.png">
-     </a>
-    </li>
-  </ul>
-
-</nav>
-  </header>
-
-<div id="inner-container">
-
-  <div id="content">
-
-        
-    <div class="text">
-      <h1>Welcome to Interactive Design and the Internet</h1>
-<p><em>“In today’s highly commercialized web of multinational corporations, proprietary applications, read-only devices, search algorithms, Content Management Systems, WYSIWYG editors, and digital publishers, it becomes an increasingly radical act to hand-code and self-publish experimental web art and writing projects.”</em></p>
-<p><em>— J.R. Carpenter, 2015</em></p>
-<h2>Overview</h2>
-<p>In this studio course, students create work for the web browser. We explore where the internet comes from, where it is today, and where it’s going—recognizing that there is no singular history, present, or future but many happening in parallel. The course in particular focuses on the internet’s impact on art—and vice versa—and how technological advance often coincides with artistic development. Students will learn foundational, front-end languages HTML, CSS, and JavaScript in order to develop unique graphic forms for the web that are considered alongside navigation, pacing, and adapting to variable screen sizes and devices. No prior programming experience is required.</p>
-<h2>Eligibility</h2>
-<p>This course is open to approximately 14 students. It is required for the 8 graduate students in the Preliminary year of the Graphic Design track. There are approximately 6 more spaces open to undergraduate students who have taken Intro to Graphic Design or Typography courses (Art 132 and Art 264), with preference to art majors and then to seniors of other majors. Interested students with special circumstances can speak to me directly.</p>
-<p>Since there is often a high demand for this class, unfortunately not all interested students are admitted. Here are qualities that help you be admitted, in order of priority:</p>
-<ul>
-<li>art major</li>
-<li>have both prerequisites</li>
-<li>senior</li>
-<li>tried to get into the class before</li>
-<li>emailed me in advance</li>
-</ul>
-<p><em>I will be in touch via email on Sunday, January 20th regarding your status in the class.</em></p>
-<h2>Class &amp; course design</h2>
-<p>This course meets for 13 classes.</p>
-<p>In general, each class will contain some of the following:</p>
-<ul>
-<li>sharing<br />
-(lecture, show and tell of examples)<br><br></li>
-<li>seminar<br />
-(dialogue based on readings)<br><br></li>
-<li>working<br />
-(learning, experimenting, designing, coding, troubleshooting)<br><br></li>
-<li>critique<br />
-(spending time with your own and others’ work, offering observations, dialogue)</li>
-</ul>
-<h3>For the first half of the course (Classes 1–7)…</h3>
-<p>Each week, you will 1) learn and practice web-based skills by completing an exercise and posting it to your individual class website, 2) write a reflection in your journal in response to a given question.</p>
-<p>Each weekly exercise will explore what’s unique to the web markup or programming focus for that week (such as HTML, CSS, or JavaScript) based on a simple prompt. Consider these exercises as practice, allowing your coding muscles to build, becoming big and strong over time.</p>
-<p>Weekly exercises are graded on:</p>
-<ul>
-<li><u>Effort</u>. Have fun with these. Try challenging yourself personally to try something new or experiment.<br><br></li>
-<li><u>On-time completion</u>. Late weekly exercises will not be accepted. Please have your weekly exercise posted to your individual class website before the beginning of class.</li>
-</ul>
-<h3>For the second half of the class (Classes 8–13)…</h3>
-<p>You will have six weeks to work on a final project. This final project will have two components: one individual, and one class-wide. By doing such a larger project, you can meaningfully apply your learned skills by working on something you truly care about. You will learn more about the final project closer to the second half of the course.</p>
-<p>This final project will be graded on its quality. Please consider two aspects:</p>
-<ul>
-<li><u>Original approach</u>. Your project should employ an original, personal approach that comes from your own process of questioning and thinking. Your project should take a stance. It should be memorable.<br><br></li>
-<li><u>Functionality, craft, and presentation</u>. Your project should achieve its goals and not break. It should feel well-considered on multiple levels. Your attention to detail in design and code should work to support your overall concepts.</li>
-</ul>
-<h2>Theme</h2>
-<figure><img src="http://spring2019.veryinteractive.net/content/1-home/how-do-you-use-the-internet-mindfully.jpg" alt="" width="375"></figure>
-<p><br>“How do you use the internet mindfully?” is this spring 2019's theme.</p>
-<p>The question comes from a recent publication <em>How do you use the internet mindfully?</em> (2018) by <a href="http://thecreativeindependent.com">The Creative Independent</a> and <a href="http://are.na">Are.na</a>. This publication will serve as the class reader. Each student will receive a physical copy. It is also available online here:<br><br />
-<a href="https://thecreativeindependent.com/series/are.na/">https://thecreativeindependent.com/series/are.na/</a></p>
-<p>Throughout the course, you will read essays from the book and then write, discuss, and make work to reflect.</p>
-<h2>Individual class websites</h2>
-<p>Students will create their own class websites by purchasing a domain name and connecting it to Github Pages hosting near the beginning of class. These websites should house all weekly exercises and the final project. At the end of the course, this website will be used to determine a student’s final grade. Students should feel free to design this site as well.</p>
-<h2>Journal</h2>
-<p>You will create your own folder on <a href="https://paper.dropbox.com">Dropbox Paper</a> titled “Interactive Design: Firstname Lastname” and share it with me (laurel.schwulst@gmail.com—please note my Dropbox email is different than my other email, laurel@linkedbyair.net) In this folder, you'll create a new document for each written reflection assigned. You'll also create a document for your final project, in which you'll chart your own process by writing down your concepts, showing alternate versions, and showing any other documentation or thinking that lead you to where you ended up for your final project. Like your exercises, your journal will be graded on completion and effort.</p>
-<h2>Grading</h2>
-<p>30% … Weekly exercises<br />
-30% … Journal<br />
-40% … Final Project</p>
-<p><em>Students may change or update their work through the end of the course. Final work will be graded on students’ individual class websites and Dropbox Paper folders on Monday, May 6th.</em></p>
-<h2>Academic integrity</h2>
-<p>Students will become familiar with using pre-existing language, images, and software as raw material while creating entirely new works. While making websites, we will learn which technologies could be appropriated and how to properly credit their inclusion.</p>
-<p><em>From <a href="https://integrity.mit.edu/handbook/writing-code">Academic Integrity at MIT: &quot;Writing Code&quot;</a>:</em></p>
-<p><em>“Writing code is similar to academic writing in that when you use or adapt code developed by someone else as part of your project, you must cite your source. However, instead of quoting or paraphrasing a source, you include an inline comment in the code. These comments not only ensure you are giving proper credit, but help with code understanding and debugging.”</em></p>
-<p><em>“You should not simply re-use code as the solution to an assignment. Like academic writing, your code can incorporate the ideas of others but should reflect your original approach to the problem.”</em></p>
-<p>I encourage you to retype someone else’s code instead of copy and pasting it. It’ll help you learn. On that note, be careful about pasting huge blocks of code. Remember to do things one step at a time so you truly understand each piece of code’s unique function.</p>
-<h2>Technology policy</h2>
-<p>While this course is about technology, the policy in this course is simple: <em>Be considerate of your fellow classmates.</em> For example, if someone is presenting their work, don’t simultaneously use your device. Put your cell phones, tablets, and laptops away in order to provide the presenter your active attention.</p>
-<h2>Attendance</h2>
-<p>Attendance is essential. Three or more absences will result in a failing grade. Three or more late arrivals (more than 10 minutes late) equals an absence. If you absolutely must miss class, email me in advance.</p>
-<h2>Materials</h2>
-<p>Students should bring their personal laptops to class. They are responsible for their own files, making sure to back them up in some way. For editing and updating code, students should download a code editor such as Atom or Sublime Text. For image-making and sketching, Adobe Photoshop, Illustrator, and InDesign are standard tools available on most Yale computers. Other good digital-image making tools include a phone, digital camera, scanner, screen capture, etc.</p>
-<p><em>For more specifics, see the <a href="http://spring2019.veryinteractive.net/resources">resources page</a>.</em></p>
-<h2>Credits</h2>
-<p>This class has been generously shaped by many. Special thanks to Dan Michaelson and Tamara Maletic of Linked by Air; past teaching assistants Matthew Wolff (’18), Ayham Ghraowi (’17), Chase Booker (’16), Eric Nylund (’15), Grace Robinson-Leo (’14), and Julia Novitch (’13); and current teaching assistant Willis Kingery.</p>
-<p>Opening quote:<br />
-J.R. Carpenter, “<a href="http://luckysoap.com/statements/handmadeweb.html">A Handmande Web</a>,” 2015.</p>    </div>
-
-  </div>
-
-  <div id="sidebar">
-  <figure class="house"><img src="http://spring2019.veryinteractive.net/content/house-tall-wind2.png" alt=""></figure>
-<center>
-ART369b: Interactive Design and the Internet
-</center>
-<p><br>git add .<br />
-git commit -m &quot;your message&quot;<br />
-git push</p>
-<p><span class="section">Time &amp; Place</span></p>
-<p>Mondays 1:30–5:20pm<br />
-210 Green Hall</p>
-<div class="print">
-<span class="section">Class website</span>
-<span>spring2019.veryinteractive.net</span>
-</div>
-<p><span class="section">People</span></p>
-<p>Instructor:</p>
-<ul>
-<li><a href="http://spring2019.veryinteractive.net/laurel-schwulst">Laurel Schwulst</a><br />
-laurel@linkedbyair.net<br><br></li>
-</ul>
-<p>Teaching assistant:</p>
-<ul>
-<li><a href="http://spring2019.veryinteractive.net/willis-kingery">Willis Kingery</a><br />
-willis.kingery@yale.edu<br><br></li>
-</ul>
-  <span>Participants:</span>
-  <ul id="roster">
-    <li>
-      <a href="https://herdimasanggara.github.io/interactive-spring2019">Herdimas Anggara</a>
-    </li>
-    <li>
-      <a href="https://mmiilloo.github.io/interactive">Milo Bonacci</a>
-    </li>
-    <li>
-      <a href="https://jessicameiflemming.github.io/interactive">Jessica Flemming</a>
-    </li>
-    <li>
-      <a href="https://v-i-c-k-y.github.io/interactive">Vicky Gebert</a>
-    </li>
-    <li>
-      <a href="https://tommyhuang.work/interactive">Tommy Huang</a>
-    </li>
-    <li>
-      <a href="https://harinjungharinjung.github.io/interactive-spring2019">Harin Jung</a>
-    </li>
-    <li>
-      <a href="https://minhwan-kim.github.io/interactive">Minhwan Kim</a>
-    </li>
-    <li>
-      <a href="https://monicakimchi.github.io/interactive">Monica Kim</a>
-    </li>
-    <li>
-      <a href="https://iiidddkkk.github.io/interactive">David Knowles</a>
-    </li>
-    <li>
-      <a href="https://sl2466.github.io/interactive">Sunnie Liu</a>
-    </li>
-    <li>
-      <a href="https://juliacma.github.io/interactive">Julia Ma</a>
-    </li>
-    <li>
-      <a href="https://adammoftah.github.io/interactive">Adam Moftah</a>
-    </li>
-    <li>
-      <a href="https://mengyi-qian.github.io/interactive">Mengyi Qian</a>
-    </li>
-    <li>
-      <a href="https://annassag.github.io/interactive">Anna Sagström</a>
-    </li>
-    <li>
-      <a href="https://vladphilips.github.io/interactive">Vlad Vykhodets</a>
-    </li>
-    <li>
-      <a href="https://betty0wang.github.io/Interactive">Betty Wang</a>
-    </li>
-  </ul>
-
-  <button id="randomizer">Randomizer</button>
-  <h1 id="chosenOne">
-    &nbsp;
-    <span></span>
-  </h1>
-
-</div>
-
-</div>
-
-<div class="clearer"></div>
-
-  <footer>
-    <div id="inner-container">
-      <div id="content">
-                <div id="sparrow">
-                      <a href="https://newrepublic.com/article/133889/reboot-world">
-              <img src="http://spring2019.veryinteractive.net/content/paul-ford.png" alt="">            </a>
-            <div class="caption">
-              Paul Ford            </div>
-                  </div>
-      </div>
-      <div id="sidebar">
-        <p>Spring 2019<br />
-Yale University, School of Art<br><br />
-<a href="http://spring2019.veryinteractive.net/about-this-site" class="site">About this site</a></p>
-        <p class="gray" style="margin-top: 1em;">
-          This page was last updated on January 18, 2019.
-        </p>
-      </div>
-    </div>
-  </footer>
-
-</div>
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
 
 </body>
 </html>
+
