--- a/index.html
+++ b/index.html
@@ -2,15 +2,49 @@
 <html>
 <head>
 <style>
-body {background-color: powderblue;}
-h1   {color: blue;}
-p    {color: red;}
+body {background-color: powderblue;
+font-family: Helvetica, Arial, sans-serif; 
+width: 90%;
+padding-left: 5%;
+padding-top: 5%}
+
+.leftcolumn {
+	display:inline-block;
+	float:left;
+    border-right: 1px solid black;
+	width: 68%;
+}
+.rightcolumn {
+	display:inline-block;
+	float:left;
+	border:none;
+	width: 25%;
+    padding-left:20px;
+}
+
+
+
+h1   {color: black;}
+p    {color: black;}
+
+
+
+
+
 </style>
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<p><button>DES 350</button> – <button>Calendar</button> – <button>Projects</button> – <button>Resources</button></p>
+<h1>Welcome to DES 350<br> Advanced Interactive Design</h1>
+
+<div class="leftcolumn">
+<p>This course focuses on interactive design.</p>
+</div>
+
+<div class="rightcolumn">
+<p>This course focuses on interactive design.</p>
+</div>
 
 </body>
 </html>
