--- a/index.html
+++ b/index.html
@@ -48,8 +48,25 @@ h1   {color: black;}
 p    {color: black;}
 
 
+@media only screen and (max-width: 700px) {
+
+.leftcolumn {
+	display:block;
+    border: none;
+	width: 98%;
+    padding-right: 2%;
+}
+.rightcolumn {
+	display:block;
+	border:none;
+	width: 98%;
+    padding-left:0px;
+    padding-right:2%;
+}
 
 
+
+}
 
 </style>
 </head>
