--- a/calendar.html
+++ b/calendar.html
@@ -77,27 +77,14 @@ p    {color: black;}
 <div class="lineupmain"></div>
 <div class="leftcolumn">
 <p>
-<h2>Objectives & Goals. </h2><br>
-Upon completion of the course, you will be able to:<br>
-• Apply previous knowledge of interaction design to advanced level projects <br>
-• Explore the combination of multiple tools and technologies of 
-	interactive design <br>
-• Understand the separation of design and content <br><br>
+<h2>Class 1 – August 25th, Monday </h2><br>
+• Hand out syllabus
+• Class intros 
+• Go over syllabus
+• Intro presentation <br><br>
 </p>
 
-<div class="lineup"></div>
-<p>
-<h2>Course Policies. You are expected to: </h2><br>
-Work attentively and seriously. Maintain your concentration and focus as you work through all the exercises. There will be discussions and presentations during the class period. Arrive to class on time and stay for the entire class period. <br><br>
-Bring all the class materials to every class.<br><br>
-Please be mindful and keep noise levels to a minimum during lab time. Since we are working with code, your colleagues need to focus. Please do not bring food to class. Please do not use any devices while others are presenting.<br><br>
-</p>
 
-<div class="lineup"></div>
-<p>
-<h2>Electronic Communication and office hours:</h2><br>
-You can email me at my UIC address: <a href="mailto:studiobema@gmail.com">mjanic3@uic.edu</a> <br><br>PDF and JPG is the only file format allowed for emails. If you have any concerns about the class or if you need to see me outside of class, e-mail me to schedule an appointment.<br><br>
-</p>
 
 </div>
 
