--- a/calendar.html
+++ b/calendar.html
@@ -72,7 +72,7 @@ p    {color: black;}
 </head>
 <body>
 
-<p><button>DES 350</button> – <button>Calendar</button> – <button>Projects</button> – <button>Resources</button></p>
+<p><button onclick="window.location.href = 'https://mjanic3.github.io/DES350/index.html';">DES 350</button> – <button>Calendar</button> – <button>Projects</button> – <button>Resources</button></p>
 <h1>Welcome to DES 350<br> Advanced Interactive Design</h1>
 <div class="lineupmain"></div>
 <div class="leftcolumn">
