--- a/calendar.html
+++ b/calendar.html
@@ -78,9 +78,9 @@ p    {color: black;}
 <div class="leftcolumn">
 <p>
 <h2>Class 1 – August 25th, Monday </h2><br>
-• Hand out syllabus
-• Class intros 
-• Go over syllabus
+• Hand out syllabus<br>
+• Class intros <br>
+• Go over syllabus<br>
 • Intro presentation <br><br>
 </p>
 
