--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@ Mondays + Wednesdays<br>
 <b>Participants</b><br>
 TBD<br><br>
 </p>
-
-
-
 </div>
+<div class="lineupmain"></div>
+Fall 2019<br>
+UIC<br><br><br>
 
 </body>
 </html>
