--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@ TBD<br><br>
 </p>
 </div>
 <div class="lineupmain"></div>
+<div class="leftcolumn">
 Fall 2019<br>
-UIC<br><br><br>
+	UIC<br><br><br></div>
 
 </body>
 </html>
