--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@ padding-top: 5%}
     padding-left:20px;
 }
 
+.footer {
+    display:block;
+    border:none;
+    width: 98%;
+    padding-top:20px;
+}
+	
 
 
 h1   {color: black;}
@@ -63,9 +70,7 @@ p    {color: black;}
     padding-left:0px;
     padding-right:2%;
 }
-
-
-
+	
 }
 
 </style>
@@ -116,7 +121,7 @@ TBD<br><br>
 </p>
 </div>
 <div class="lineupmain"></div>
-<div class="leftcolumn">
+<div class="footer">
 Fall 2019<br>
 	UIC<br><br><br></div>
 
