--- a/calendar.html
+++ b/calendar.html
@@ -77,7 +77,7 @@ p    {color: black;}
 <button onclick="window.location.href = 'https://mjanic3.github.io/DES350/projects.html';">Projects</button> – 
 <button onclick="window.location.href = 'https://mjanic3.github.io/DES350/resources.html';">Resources</button></p>
 	
-<h1>Welcome to DES 350<br> Advanced Interactive Design</h1>
+<h1>Calendar – DES 350</h1>
 <div class="lineupmain"></div>
 <div class="leftcolumn">
 <p>
