--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ padding-top: 5%}
 }
 
 .footer {
-    display:block;
+    display: inline-block;
     border:none;
-    width: 98%;
+    width: 100%;
     padding-top:20px;
 }
 	
@@ -120,10 +120,11 @@ Mondays + Wednesdays<br>
 TBD<br><br>
 </p>
 </div>
+
 <div class="lineupmain"></div>
 <div class="footer">
 Fall 2019<br>
-	UIC<br><br><br></div>
+UIC<br><br><br></div>
 
 </body>
 </html>
