--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@ Upon completion of the course, you will be able to:<br>
 Work attentively and seriously. Maintain your concentration and focus as you work through all the exercises. There will be discussions and presentations during the class period. Arrive to class on time and stay for the entire class period. <br><br>
 Bring all the class materials to every class.<br><br>
 Please be mindful and keep noise levels to a minimum during lab time. Since we are working with code, your colleagues need to focus. Please do not bring food to class. Please do not use any devices while others are presenting.<br><br>
+Do not copy work and pass it off as your own. This is a serious matter and can lead to a failing grade or worse. If you copy code from a site, please city it in your source code as you would in an essay.
+	<br><br>
 </p>
 
 <div class="lineup"></div>
