--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@ p    {color: black;}
 <div class="lineupmain"></div>
 <div class="leftcolumn">
 <p>
-<h2>Project 1</h2><br>
+<h2>Project 1 – HTML Calculator</h2><br>
 We will code a simple calculator using HTML and Javascript in class. 
 We will then add CSS code to style the calculator. The calculator will be styled using CSS with the following considerations:
 <br>
