--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <style>
 body {background-color: powderblue;
 font-family: Helvetica, Arial, sans-serif; 
+line-height: 1.4em;
 width: 90%;
 padding-left: 5%;
 padding-top: 5%}
-
 .leftcolumn {
 	display:inline-block;
 	float:left;
@@ -15,7 +15,6 @@ padding-top: 5%}
 	width: 68%;
     padding-right: 2%;
 }
-
 .lineup {
 	display:inline-block;
 	float:left;
@@ -24,7 +23,6 @@ padding-top: 5%}
     margin-bottom: 15px;
 	width: 100%;
 }
-
 .lineupmain {
 	display:inline-block;
 	float:left;
@@ -33,7 +31,6 @@ padding-top: 5%}
     margin-bottom: 0px;
 	width: 100%;
 }
-
 .rightcolumn {
 	display:inline-block;
 	float:left;
@@ -41,7 +38,6 @@ padding-top: 5%}
 	width: 25%;
     padding-left:20px;
 }
-
 .footer {
     display: inline-block;
     border:none;
@@ -49,14 +45,10 @@ padding-top: 5%}
     padding-top:20px;
 }
 	
-
-
-h1   {color: black;}
+h1   {color: black;
+	line-height: 1.1em;}
 p    {color: black;}
-
-
 @media only screen and (max-width: 700px) {
-
 .leftcolumn {
 	display:block;
     border: none;
@@ -72,14 +64,13 @@ p    {color: black;}
 }
 	
 }
-
 </style>
 </head>
 <body>
 
 <p><button onclick="window.location.href = 'https://mjanic3.github.io/DES350/index.html';">DES 350</button> – 
 <button onclick="window.location.href = 'https://mjanic3.github.io/DES350/calendar.html';">Calendar</button> – 
-<button onclick="window.location.href = 'https://mjanic3.github.io/DES350/projects.html';">Projects</button> – 
+<button onclick="window.location.href = 'https://mjanic3.github.io/DES350/projects.html';">Projects</button> – 
 <button onclick="window.location.href = 'https://mjanic3.github.io/DES350/resources.html';">Resources</button></p>
 <h1>Welcome to DES 350<br> Advanced Interactive Design</h1>
 <div class="lineupmain"></div>
@@ -112,9 +103,9 @@ You can email me at my UIC address: <a href="mailto:studiobema@gmail.com">mjanic
 </div>
 
 <div class="rightcolumn">
-<p>DES 350 / Fall, 2019<br>
+<p>DES 350 / Fall, 2019<br>
 Mondays + Wednesdays<br>
-4 to 6.40pm / Room 2340</p>
+4 to 6.40pm / Room 2340</p>
 
 <div class="lineup"></div>
 <p>
@@ -126,8 +117,8 @@ TBD<br><br>
 <div class="lineupmain"></div>
 <div class="footer">
 Fall 2019<br>
-UIC<br><br><br></div>
+UIC<br>
+	<br></div>
 
 </body>
 </html>
-
