--- a/calendar.html
+++ b/calendar.html
@@ -3,6 +3,7 @@
 <head>
 <style>
 body {background-color: powderblue;
+line-height: 1.4em;
 font-family: Helvetica, Arial, sans-serif; 
 width: 90%;
 padding-left: 5%;
@@ -44,7 +45,8 @@ padding-top: 5%}
 
 
 
-h1   {color: black;}
+h1   {color: black;
+	line-height: 1.1em;}
 p    {color: black;}
 
 
@@ -80,17 +82,49 @@ p    {color: black;}
 <h1>Calendar – DES 350</h1>
 <div class="lineupmain"></div>
 <div class="leftcolumn">
+	
+<p>
+<h2>No Class – September 2, Monday </h2><br>
+• There is no class – but remember the homework from Class 2<br><br>
+</p>	
+	
+	
+	
+	
+<div class="lineup"></div>
+<p>
+<h2>Class 2 – August 28th, Monday </h2><br>
+	<b>In Class:</b><br>
+• Syllabus printout<br>
+• Question of the day: what digital media relaxes you?<br>
+• Calculator HTML Programming <br>
+• Styling in CSS<br><br>
+	
+	<b>Homework for the long weekend:</b><br>
+	Assignement 1: Finish your HTML calculator and style each element to your liking. Upload your file to Github. <br><br>
+Assignement 2: Dieter Rams. <br>Read this article: <br> <a href="https://readymag.com/shuffle/dieter-rams/" target="_blank">https://readymag.com/shuffle/dieter-rams/</a><br>
+	Write out your own interpretation of the 10 principles of good design that include:<br>
+	a. Your interpration of what each of the 10 principles mean<br>
+	b. An example of something you use that follows each principle as you interpret it<br>
+	c. How you would, have in the past, or would not apply this principle in your work<br>
+	<br>
+	Publish your written essay via GitHub as an unstyled HTML document accessible over the web and have it ready to discuss next week.<br><br>
+</p>
+	
+	
+	<div class="lineup"></div>
 <p>
 <h2>Class 1 – August 25th, Monday </h2><br>
-• Hand out syllabus<br>
 • Class intros <br>
 • Go over syllabus<br>
 • Intro presentation <br><br>
 </p>
-
-
+	
+	
 
 </div>
+
+
 
 <div class="rightcolumn">
 <p>DES 350 / Fall, 2019<br>
