--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
 <style>
 body {background-color: powderblue;
 font-family: Helvetica, Arial, sans-serif; 
+line-height: 1.4em;
 width: 90%;
 padding-left: 5%;
 padding-top: 5%}
@@ -38,7 +39,9 @@ padding-top: 5%}
     padding-left:20px;
 }
 h1   {color: black;}
-p    {color: black;}
+p    {color: black;
+	line-height: 1.1em;}
+	
 @media only screen and (max-width: 700px) {
 .leftcolumn {
 	display:block;
@@ -76,10 +79,6 @@ We will then add CSS code to style the calculator. The calculator will be styled
 • User Familiarity – how do calculators usually look? <br>
 • Aesthetics – does the style add or detract from the function? <br>
 <br>
-<br>
-Based on a take home reading, each student will create two versions of the calculator:<br>
-• One that is minimal and Swiss<br>
-• One that seeks to emulate a real calculator<br>
 <br><br>
 </p>
 
