--- a/resources.html
+++ b/resources.html
@@ -3,10 +3,12 @@
 <head>
 <style>
 body {background-color: powderblue;
+line-height: 1.4em;
 font-family: Helvetica, Arial, sans-serif; 
 width: 90%;
 padding-left: 5%;
 padding-top: 5%}
+
 .leftcolumn {
 	display:inline-block;
 	float:left;
@@ -14,6 +16,7 @@ padding-top: 5%}
 	width: 68%;
     padding-right: 2%;
 }
+
 .lineup {
 	display:inline-block;
 	float:left;
@@ -22,6 +25,7 @@ padding-top: 5%}
     margin-bottom: 15px;
 	width: 100%;
 }
+
 .lineupmain {
 	display:inline-block;
 	float:left;
@@ -30,6 +34,7 @@ padding-top: 5%}
     margin-bottom: 0px;
 	width: 100%;
 }
+
 .rightcolumn {
 	display:inline-block;
 	float:left;
@@ -37,9 +42,16 @@ padding-top: 5%}
 	width: 25%;
     padding-left:20px;
 }
-h1   {color: black;}
+
+
+
+h1   {color: black;
+	line-height: 1.1em;}
 p    {color: black;}
+
+
 @media only screen and (max-width: 700px) {
+
 .leftcolumn {
 	display:block;
     border: none;
@@ -53,7 +65,11 @@ p    {color: black;}
     padding-left:0px;
     padding-right:2%;
 }
+
+
+
 }
+
 </style>
 </head>
 <body>
@@ -63,23 +79,45 @@ p    {color: black;}
 <button onclick="window.location.href = 'https://mjanic3.github.io/DES350/projects.html';">Projects</button> – 
 <button onclick="window.location.href = 'https://mjanic3.github.io/DES350/resources.html';">Resources</button></p>
 	
-<h1>Resources – DES 350</h1>
+<h1>Resources – DES 350</h1>
 <div class="lineupmain"></div>
 <div class="leftcolumn">
+	
 <p>
-<h2>Coming Soon</h2><br>
-
-<br><br>
+<h2><a href="http://github.com" target="_blank">http://github.com</a><br>
+</p>	
+	
+<div class="lineup"></div>
+<p>
+<h2><a href="https://www.linkedin.com/learning/html-essential-training/welcome?u=43607124" target="_blank">https://www.linkedin.com/learning/html-essential-training/welcome?u=43607124</a><br>
 </p>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+<div class="lineup"></div>
+<p>
+<h2><a href="https://readymag.com/shuffle/dieter-rams/" target="_blank">https://readymag.com/shuffle/dieter-rams/</a><br>
+</p>
+	
+	
 
-
+	
+	
 
 </div>
 
+
+
 <div class="rightcolumn">
-<p>DES 350 / Fall, 2019<br>
+<p>DES 350 / Fall, 2019<br>
 Mondays + Wednesdays<br>
-4 to 6.40pm / Room 2340</p>
+4 to 6.40pm / Room 2340</p>
 
 <div class="lineup"></div>
 <p>
@@ -93,3 +131,4 @@ TBD<br><br>
 
 </body>
 </html>
+
