--- a/projects.html
+++ b/projects.html
@@ -38,10 +38,16 @@ padding-top: 5%}
 	width: 25%;
     padding-left:20px;
 }
-h1   {color: black;}
-p    {color: black;
-	line-height: 1.1em;}
+.footer {
+    display: inline-block;
+    border:none;
+    width: 100%;
+    padding-top:20px;
+}
 	
+h1   {color: black;
+	line-height: 1.1em;}
+p    {color: black;}
 @media only screen and (max-width: 700px) {
 .leftcolumn {
 	display:block;
@@ -56,6 +62,7 @@ p    {color: black;
     padding-left:0px;
     padding-right:2%;
 }
+	
 }
 </style>
 </head>
