--- a/calendar.html
+++ b/calendar.html
@@ -84,11 +84,25 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
+<h2>Class 3 – September 4, Wednesday </h2><br>
+<strong>In Class:</strong><br>
+• Question of the day: what kind of design would you like to pursue in your career?<br>
+• Dieter Rams Discussion and Examples<br>
+• Home set up on GitHub<br> 
+• Second version of calculator: moodboard and visual design (no programming)<br>
+<br>
+<strong>Homework for the weekend:</strong><br>
+• In class, make sure I have an address for your GitHub page<br>
+• Finish the visual design for your second calculator in Illustrator<br>
+• Upload a jpg and link it on your homepage<br>
+<br><br>
+</p>	
+	
+	<div class="lineup"></div>
+<p>
 <h2>No Class – September 2, Monday </h2><br>
 • There is no class – but remember the homework from Class 2<br><br>
 </p>	
-	
-	
 	
 	
 <div class="lineup"></div>
