--- a/projects.html
+++ b/projects.html
@@ -77,6 +77,17 @@ p    {color: black;}
 <div class="lineupmain"></div>
 <div class="leftcolumn">
 <p>
+<h2>Project 1.2 – HTML Calculator – Based on the work of Dieter Rams</h2><br>
+• We will first research the work of Dieter Rams.<br>
+• Create a moodboard of elements from his designs to use for the calculator.<br>
+• Design your calculator in Illustrator. Take into account: size in browser, alignment, color, typography. Include a roll-over state on one of the buttons.<br>
+• Code your design using your previous iteration and update CSS to reflect your new design.<br>
+• Use the W3 Schools CSS tutorial to determine the styling: <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS Tutorial on W3 Schools</a><br>
+<br>
+</p>
+
+	<div class="lineup"></div>
+<p>
 <h2>Project 1 – HTML Calculator</h2><br>
 We will code a simple calculator using HTML and Javascript in class. 
 We will then add CSS code to style the calculator. The calculator will be styled using CSS with the following considerations:
@@ -88,7 +99,10 @@ We will then add CSS code to style the calculator. The calculator will be styled
 <br>
 <br><br>
 </p>
-
+	
+	
+	
+	
 
 
 </div>
