--- a/resources.html
+++ b/resources.html
@@ -83,22 +83,24 @@ p    {color: black;}
 <div class="lineupmain"></div>
 <div class="leftcolumn">
 	
+	
+	
+	
 <p>
 <h2><a href="http://github.com" target="_blank">http://github.com</a><br>
 </p>	
 	
 <div class="lineup"></div>
 <p>
+<h2><a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS Tutorial on W3 Schools</a><br>
+</p>	
+	
+	
+	
+<div class="lineup"></div>
+<p>
 <h2><a href="https://www.linkedin.com/learning/html-essential-training/welcome?u=43607124" target="_blank">https://www.linkedin.com/learning/html-essential-training/welcome?u=43607124</a><br>
 </p>
-	
-	
-	
-	
-	
-	
-	
-	
 	
 <div class="lineup"></div>
 <p>
