--- a/calendar.html
+++ b/calendar.html
@@ -84,6 +84,21 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 <p>
+<h2>Class 4 – September 9, Monday </h2><br>
+<strong>In Class:</strong><br>
+• Examples and discussion of programmed calculators<br>
+• Go over homework assignment – Dieter Rams inspired calculator<br>
+• Presentation / HTML lab: Object Styling, float, z-index, and reference library.<br> 
+• LAB: Feedback on design of the Dieter Calculator. Begin HTML programming.<br>
+<br>
+<strong>For Wednesday:</strong><br>
+• In class, make sure you get sign-off on your design in class.<br>
+• In class, make sure your final calculator design is linked to your page.
+<br><br>
+</p>	
+	
+<div class="lineup"></div>	
+<p>
 <h2>Class 3 – September 4, Wednesday </h2><br>
 <strong>In Class:</strong><br>
 • Question of the day: what kind of design would you like to pursue in your career?<br>
@@ -97,6 +112,8 @@ p    {color: black;}
 • Upload a jpg and link it on your homepage<br>
 <br><br>
 </p>	
+	
+	
 	
 	<div class="lineup"></div>
 <p>
@@ -146,9 +163,25 @@ Mondays + Wednesdays<br>
 4 to 6.40pm / Room 2340</p>
 
 <div class="lineup"></div>
-<p>
-<b>Participants</b><br>
-TBD<br><br>
+<p> <strong>Participants</strong><br>
+<a href="https://zali30.github.io/DES350/" target="_blank">Ziad Ali</a> <br>
+<a href="https://k11borrero.github.io/DES350/" target="_blank">Keila Borrero</a> <br>
+<a href="https://anhvyb.github.io/DES350/" target="_blank">Vy Bui</a> <br>
+<a href="https://kdirnb2.github.io/DES350/" target="_blank">Katelyn Dirnberger</a> <br>
+<a href="https://tmfriese.github.io/DES350/" target="_blank">Tiffany Friese</a> <br>
+<a href="https://agarc88.github.io/DES350/" target="_blank">Alden Garcia</a> <br>
+<a href="https://cgasid2.github.io/DES350/" target="_blank">Cecily Gasidlo</a> <br>
+<a href="https://gira006.github.io/DES350/" target="_blank">Daniel Giraldo</a> <br>
+<a href="https://ahalam2.github.io/DES350/" target="_blank">Angelika Halama</a> <br>
+<a href="https://donteking.github.io/DES350/" target="_blank">Donte King</a> <br>
+<a href="https://samorie.github.io/DES350/" target="_blank">Sammy Lien</a> <br>
+<a href="https://dmejia11.github.io/DES350/" target="_blank">Diana Mejia</a> <br>
+<a href="https://jmiran28.github.io/DES350/" target="_blank">John-John Miranda</a> <br>
+<a href="https://snguye44.github.io/DES350/" target="_blank">Sarah Nguyen</a> <br>	
+<a href="https://lpark25.github.io/DES350/" target="_blank">Lina Park</a> <br>	     
+<a href="https://trando3.github.io/DES350/" target="_blank">Teris Randolph <br>		
+<a href="https://avelaz36.github.io/DES350/" target="_blank">Arturo Velazquez</a> <br>	
+<a href="https://vweiss4.github.io/DES350/" target="_blank">Vince Weiss</a> <br><br>
 </p>
 
 
