--- a/projects.html
+++ b/projects.html
@@ -100,9 +100,6 @@ We will then add CSS code to style the calculator. The calculator will be styled
 <br><br>
 </p>
 	
-	
-	
-	
 
 
 </div>
@@ -113,9 +110,25 @@ Mondays + Wednesdays<br>
 4 to 6.40pm / Room 2340</p>
 
 <div class="lineup"></div>
-<p>
-<b>Participants</b><br>
-TBD<br><br>
+<p> <strong>Participants</strong><br>
+<a href="https://zali30.github.io/DES350/" target="_blank">Ziad Ali</a> <br>
+<a href="https://k11borrero.github.io/DES350/" target="_blank">Keila Borrero</a> <br>
+<a href="https://anhvyb.github.io/DES350/" target="_blank">Vy Bui</a> <br>
+<a href="https://kdirnb2.github.io/DES350/" target="_blank">Katelyn Dirnberger</a> <br>
+<a href="https://tmfriese.github.io/DES350/" target="_blank">Tiffany Friese</a> <br>
+<a href="https://agarc88.github.io/DES350/" target="_blank">Alden Garcia</a> <br>
+<a href="https://cgasid2.github.io/DES350/" target="_blank">Cecily Gasidlo</a> <br>
+<a href="https://gira006.github.io/DES350/" target="_blank">Daniel Giraldo</a> <br>
+<a href="https://ahalam2.github.io/DES350/" target="_blank">Angelika Halama</a> <br>
+<a href="https://donteking.github.io/DES350/" target="_blank">Donte King</a> <br>
+<a href="https://samorie.github.io/DES350/" target="_blank">Sammy Lien</a> <br>
+<a href="https://dmejia11.github.io/DES350/" target="_blank">Diana Mejia</a> <br>
+<a href="https://jmiran28.github.io/DES350/" target="_blank">John-John Miranda</a> <br>
+<a href="https://snguye44.github.io/DES350/" target="_blank">Sarah Nguyen</a> <br>	
+<a href="https://lpark25.github.io/DES350/" target="_blank">Lina Park</a> <br>	     
+<a href="https://trando3.github.io/DES350/" target="_blank">Teris Randolph <br>		
+<a href="https://avelaz36.github.io/DES350/" target="_blank">Arturo Velazquez</a> <br>	
+<a href="https://vweiss4.github.io/DES350/" target="_blank">Vince Weiss</a> <br><br>
 </p>
 
 </div>
