--- a/calendar.html
+++ b/calendar.html
@@ -44,9 +44,29 @@ padding-top: 5%}
 }
 
 
-
 h1   {color: black;
+	font-size: 58px;
+	letter-spacing: -2px;
 	line-height: 1.1em;}
+	
+a {
+  color: black;
+}
+	
+a:hover {
+  text-decoration: none;
+}	
+	
+	.menu {
+		position: fixed;
+		top:0px;
+		left:0px;
+		width: 94%;
+		padding-left: 6%;
+		padding-top: 20px;
+		height: 40px;
+		background-color: powderblue;
+	}
 p    {color: black;}
 
 
@@ -73,13 +93,10 @@ p    {color: black;}
 </style>
 </head>
 <body>
-
-<p><button onclick="window.location.href = 'https://mjanic3.github.io/DES350/index.html';">DES 350</button> – 
-<button onclick="window.location.href = 'https://mjanic3.github.io/DES350/calendar.html';">Calendar</button> – 
-<button onclick="window.location.href = 'https://mjanic3.github.io/DES350/projects.html';">Projects</button> – 
-<button onclick="window.location.href = 'https://mjanic3.github.io/DES350/resources.html';">Resources</button></p>
+	<div class="menu">
+	<strong><a href="https://mjanic3.github.io/DES350/index.html" target="_self">Advanced Interactive Design</a></strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Calendar&nbsp;&nbsp;&nbsp;<a href="https://mjanic3.github.io/DES350/projects.html" target="_self">Projects</a>&nbsp;&nbsp;&nbsp;<a href="https://mjanic3.github.io/DES350/resources.html" target="_self">Resources</a></div>
 	
-<h1>Calendar – DES 350</h1>
+<h1>Calendar</h1>
 <div class="lineupmain"></div>
 <div class="leftcolumn">
 	
@@ -160,7 +177,8 @@ Assignement 2: Dieter Rams. <br>Read this article: <br> <a href="https://readyma
 <div class="rightcolumn">
 <p>DES 350 / Fall, 2019<br>
 Mondays + Wednesdays<br>
-4 to 6.40pm / Room 2340</p>
+4 to 6.40pm / Room 2340<br>
+Instructor: Michal Janicki</p>
 
 <div class="lineup"></div>
 <p> <strong>Participants</strong><br>
