--- a/index.html
+++ b/index.html
@@ -46,7 +46,29 @@ padding-top: 5%}
 }
 	
 h1   {color: black;
+	font-size: 58px;
+	letter-spacing: -2px;
 	line-height: 1.1em;}
+	
+a {
+  color: black;
+}
+	
+a:hover {
+  text-decoration: none;
+}	
+	
+	.menu {
+		position: fixed;
+		top:0px;
+		left:0px;
+		width: 94%;
+		padding-left: 6%;
+		padding-top: 20px;
+		height: 40px;
+		background-color: powderblue;
+	}
+	
 p    {color: black;}
 @media only screen and (max-width: 700px) {
 .leftcolumn {
@@ -62,17 +84,14 @@ p    {color: black;}
     padding-left:0px;
     padding-right:2%;
 }
-	
 }
 </style>
 </head>
 <body>
+	<div class="menu">
+	<strong>Advanced Interactive Design</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <a href="https://mjanic3.github.io/DES350/calendar.html" target="_self">Calendar</a>&nbsp;&nbsp;&nbsp;<a href="https://mjanic3.github.io/DES350/projects.html" target="_self">Projects</a>&nbsp;&nbsp;&nbsp;<a href="https://mjanic3.github.io/DES350/resources.html" target="_self">Resources</a></div>
 
-<p><button onclick="window.location.href = 'https://mjanic3.github.io/DES350/index.html';">DES 350</button> – 
-<button onclick="window.location.href = 'https://mjanic3.github.io/DES350/calendar.html';">Calendar</button> – 
-<button onclick="window.location.href = 'https://mjanic3.github.io/DES350/projects.html';">Projects</button> – 
-<button onclick="window.location.href = 'https://mjanic3.github.io/DES350/resources.html';">Resources</button></p>
-<h1>Welcome to DES 350<br> Advanced Interactive Design</h1>
+<h1>Welcome</h1>
 <div class="lineupmain"></div>
 <div class="leftcolumn">
 <p>
@@ -105,7 +124,8 @@ You can email me at my UIC address: <a href="mailto:studiobema@gmail.com">mjanic
 <div class="rightcolumn">
 <p>DES 350 / Fall, 2019<br>
 Mondays + Wednesdays<br>
-4 to 6.40pm / Room 2340</p>
+4 to 6.40pm / Room 2340<br>
+Instructor: Michal Janicki</p>
 
 <div class="lineup"></div>
 <p> <strong>Participants</strong><br>
