--- a/projects.html
+++ b/projects.html
@@ -44,9 +44,29 @@ padding-top: 5%}
     width: 100%;
     padding-top:20px;
 }
-	
 h1   {color: black;
+	font-size: 58px;
+	letter-spacing: -2px;
 	line-height: 1.1em;}
+	
+a {
+  color: black;
+}
+	
+a:hover {
+  text-decoration: none;
+}	
+	
+	.menu {
+		position: fixed;
+		top:0px;
+		left:0px;
+		width: 94%;
+		padding-left: 6%;
+		padding-top: 20px;
+		height: 40px;
+		background-color: powderblue;
+	}
 p    {color: black;}
 @media only screen and (max-width: 700px) {
 .leftcolumn {
@@ -67,13 +87,10 @@ p    {color: black;}
 </style>
 </head>
 <body>
-
-<p><button onclick="window.location.href = 'https://mjanic3.github.io/DES350/index.html';">DES 350</button> – 
-<button onclick="window.location.href = 'https://mjanic3.github.io/DES350/calendar.html';">Calendar</button> – 
-<button onclick="window.location.href = 'https://mjanic3.github.io/DES350/projects.html';">Projects</button> – 
-<button onclick="window.location.href = 'https://mjanic3.github.io/DES350/resources.html';">Resources</button></p>
+	<div class="menu">
+	<strong><a href="https://mjanic3.github.io/DES350/index.html" target="_self">Advanced Interactive Design</a></strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://mjanic3.github.io/DES350/calendar.html" target ="_self">Calendar</a>&nbsp;&nbsp;&nbsp;Projects&nbsp;&nbsp;&nbsp;<a href="https://mjanic3.github.io/DES350/resources.html" target="_self">Resources</a></div>
 	
-<h1>Projects – DES 350</h1>
+<h1>Projects</h1>
 <div class="lineupmain"></div>
 <div class="leftcolumn">
 <p>
@@ -107,7 +124,8 @@ We will then add CSS code to style the calculator. The calculator will be styled
 <div class="rightcolumn">
 <p>DES 350 / Fall, 2019<br>
 Mondays + Wednesdays<br>
-4 to 6.40pm / Room 2340</p>
+4 to 6.40pm / Room 2340<br>
+Instructor: Michal Janicki</p>
 
 <div class="lineup"></div>
 <p> <strong>Participants</strong><br>
