--- a/resources.html
+++ b/resources.html
@@ -116,12 +116,12 @@ p    {color: black;}
 	
 <div class="lineup"></div>
 <p>
-<h2><a href="https://www.linkedin.com/learning/html-essential-training/welcome?u=43607124" target="_blank">https://www.linkedin.com/learning/html-essential-training/welcome?u=43607124</a><br>
+<h2><a href="https://www.linkedin.com/learning/html-essential-training/welcome?u=43607124" target="_blank">Lynda HTML essentials training</a><br>
 </p>
 	
 <div class="lineup"></div>
 <p>
-<h2><a href="https://readymag.com/shuffle/dieter-rams/" target="_blank">https://readymag.com/shuffle/dieter-rams/</a><br>
+<h2><a href="https://readymag.com/shuffle/dieter-rams/" target="_blank">Dieter Rams Article</a><br>
 </p>
 	
 	
